Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,4 +32,7 @@ steps:
      repository: $(imageName)
      command: 'buildAndPush'
      Dockerfile: '**/Dockerfile'
+     tags: |
+       $(Build.BuildId)
+       latest
   displayName: "Build and push of Docker image"
